Adicionado lombok como dependencia

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,11 @@
   <groupId>br.com.cauany</groupId>
   <artifactId>wisList</artifactId>
   <version>0.0.1</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  		<version>1.18.36</version>
+  	</dependency>
+  </dependencies>
 </project>
