--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,10 @@
   		<artifactId>lombok</artifactId>
   		<version>1.18.36</version>
   	</dependency>
+	<dependency>
+	    <groupId>com.mysql</groupId>
+	    <artifactId>mysql-connector-j</artifactId>
+	    <version>9.2.0</version>
+	</dependency>
   </dependencies>
 </project>
